Fixing alignment issue

--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -369,6 +369,7 @@
 
 				.videos-ui__video-placeholder, .videos-ui__chapters {
 					margin: 0 0 20px;
+					flex: 0 0 360px;
 				}
 
 				.videos-ui__video-placeholder {
